adding pFocusTrap and pAutoFocus to the first input of the pages login , register,forget password and email verification

--- a/src/app/pages/forgetpassword/forgetpassword.component.html
+++ b/src/app/pages/forgetpassword/forgetpassword.component.html
@@ -15,7 +15,7 @@
           <span>Forget Password</span>
         </h1>
     
-        <form class="forgetPassword-form" [formGroup]="forgetPasswordForm" (ngSubmit)="onSubmit()">
+        <form pFocusTrap class="forgetPassword-form" [formGroup]="forgetPasswordForm" (ngSubmit)="onSubmit()">
           <p class="forgetPassword-subtitle">
             Enter your Email to Reset your Password.
           </p>
@@ -26,6 +26,7 @@
             <div class="forgetPassword-Input">
               <p-floatlabel variant="on">
                 <input
+                [pAutoFocus]="true"
                   pInputText
                   id="forgetPassword"
                   type="text"
