--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -10,12 +10,12 @@
 }
 
 <div class="login-container">
-  <div class="login-card">
+  <div  class="login-card">
     <h1 class="login-title">
       <span>Log In</span>
     </h1>
 
-    <form class="login-form" [formGroup]="logInForm" (ngSubmit)="onSubmit()">
+    <form pFocusTrap class="login-form" [formGroup]="logInForm" (ngSubmit)="onSubmit()">
       <p class="login-subtitle">
         Enter your credential to access your account.
       </p>
@@ -24,7 +24,7 @@
       <div class="form-field">
         <div class="email-Input">
           <p-floatlabel variant="on">
-            <input pInputText id="email" type="email" formControlName="email" />
+            <input pInputText id="email" type="email" formControlName="email" [pAutoFocus]="true"  />
             <label for="email">Email Address</label>
           </p-floatlabel>
           <div class="error-message">
