--- a/src/app/features/users/component/user-list/user-list.component.html
+++ b/src/app/features/users/component/user-list/user-list.component.html
@@ -1,1 +1,8 @@
-<p>user-list works!</p>
+<app-table
+  [loading]="loading"
+  [metaData]="metaData"
+  [rowsData]="userList"
+  [alert]="alert"
+  [culumnsTitle]="culumnsTitle"
+  [culemnsFilter]="culemnsFilter"
+></app-table>
