fix data format problem and add tooltip to help with filter

--- a/src/app/share/table/table.component.html
+++ b/src/app/share/table/table.component.html
@@ -45,6 +45,8 @@
       @if(item.title){
       <th>
         <p-columnFilter
+        pTooltip="{{ item.tip }}" 
+        tooltipPosition="right"
           type="{{ item.type }}"
           field="{{ item.title }}"
           placeholder="Search by {{ item.title }}"
