--- a/src/app/share/table/table.component.scss
+++ b/src/app/share/table/table.component.scss
@@ -49,4 +49,9 @@
       margin-right: 0.25rem;
     }
   }
+  .inline-avatar {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+  }
   
