--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,4 +1,3 @@
-<p>profile works!</p>
-<h1>{{ auth.currentUser()?.name }}</h1>
-<p>{{ auth.currentUser()?.email }}</p>
-<p>{{ auth.currentUser()?.role }}</p>
+<app-details 
+[data]=" data"
+/>
