making a general toast for alert ,confermation and success

--- a/src/app/share/details/details.component.scss
+++ b/src/app/share/details/details.component.scss
@@ -53,17 +53,21 @@
             background-color: #161b22;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
             border-radius: 8px;
-  
-            .p-panel-header {
-              background-color: #3a3f47 !important; 
-              color: #ffffff !important;
-              font-size: 1rem;
-              font-weight: bold;
-              padding: 10px 15px;
-              border-bottom: 1px solid #30363d;
-              border-top-left-radius: 8px;
-              border-top-right-radius: 8px;
-            }
+            
+            // .p-panel-title{
+            //   font-weight: 1000;
+            // }
+
+            // .p-panel-header {
+            //   background-color: #3a3f47 ; 
+            //   color: #ffffff ;
+            //   font-size: 1rem;
+            //   font-weight: bold;
+            //   padding: 10px 15px;
+            //   border-bottom: 1px solid #30363d;
+            //   border-top-left-radius: 8px;
+            //   border-top-right-radius: 8px;
+            // }
             p {
               margin: 10px 0;
               font-size: 0.95rem;
